Verif/Test/Invalide/test_erreur_0.3.deca
// Description:
//    Programme soulevant l'erreur (0.3)
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Identificateur 'String' non déclaré (règle 0.3)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 12/01/2012

String x;
{
}